--- a/doc/latex/classc_planner_test.tex
+++ b/doc/latex/classc_planner_test.tex
@@ -11,8 +11,7 @@ The fixture for testing class \mbox{\hyperlink{classc_planner_test}{c\+Planner\+
 
 
 
-Inheritance diagram for c\+Planner\+Test\+:
-\nopagebreak
+Inheritance diagram for c\+Planner\+Test\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for c\+Planner\+Test\+:
 \end{figure}
 
 
-Collaboration diagram for c\+Planner\+Test\+:
-\nopagebreak
+Collaboration diagram for c\+Planner\+Test\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
