--- a/doc/latex/classplanner_1_1c_audi_rover.tex
+++ b/doc/latex/classplanner_1_1c_audi_rover.tex
@@ -11,8 +11,7 @@ The concrete \mbox{\hyperlink{classplanner_1_1c_audi_rover}{c\+Audi\+Rover}} cla
 
 
 
-Inheritance diagram for planner\+:\+:c\+Audi\+Rover\+:
-\nopagebreak
+Inheritance diagram for planner\+:\+:c\+Audi\+Rover\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for planner\+:\+:c\+Audi\+Rover\+:
 \end{figure}
 
 
-Collaboration diagram for planner\+:\+:c\+Audi\+Rover\+:
-\nopagebreak
+Collaboration diagram for planner\+:\+:c\+Audi\+Rover\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -49,7 +47,7 @@ void \mbox{\hyperlink{classplanner_1_1c_audi_rover_a581d4a30c727d6fbe224b317834a
 \begin{DoxyCompactList}\small\item\em Resets the total planning time to zero island seconds. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classplanner_1_1c_audi_rover_ab4ff29dbdcf096e9f3ec0a734ed7b2d3}\label{classplanner_1_1c_audi_rover_ab4ff29dbdcf096e9f3ec0a734ed7b2d3}} 
 void \mbox{\hyperlink{classplanner_1_1c_audi_rover_ab4ff29dbdcf096e9f3ec0a734ed7b2d3}{count\+Planner}} ()
-\begin{DoxyCompactList}\small\item\em Debug method to check use cound of shared pointer. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Debug method to check use count of shared pointer. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Additional Inherited Members}
 
 
