--- a/doc/latex/classplanner_1_1c_planner_interface.tex
+++ b/doc/latex/classplanner_1_1c_planner_interface.tex
@@ -11,8 +11,7 @@
 
 
 
-Collaboration diagram for planner\+:\+:c\+Planner\+Interface$<$ Directions $>$\+:
-\nopagebreak
+Collaboration diagram for planner\+:\+:c\+Planner\+Interface$<$ Directions $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
