--- a/doc/latex/classplanner_1_1c_rover_interface.tex
+++ b/doc/latex/classplanner_1_1c_rover_interface.tex
@@ -11,8 +11,7 @@ Forward declaration of interface \mbox{\hyperlink{classplanner_1_1c_rover_interf
 
 
 
-Collaboration diagram for planner\+:\+:c\+Rover\+Interface$<$ Directions $>$\+:
-\nopagebreak
+Collaboration diagram for planner\+:\+:c\+Rover\+Interface$<$ Directions $>$\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -27,7 +26,7 @@ virtual std\+::shared\+\_\+ptr$<$ \mbox{\hyperlink{classplanner_1_1c_planner_int
 \item 
 \mbox{\Hypertarget{classplanner_1_1c_rover_interface_ad2b552aaf43f7ce5af340d05b5657267}\label{classplanner_1_1c_rover_interface_ad2b552aaf43f7ce5af340d05b5657267}} 
 double \mbox{\hyperlink{classplanner_1_1c_rover_interface_ad2b552aaf43f7ce5af340d05b5657267}{Cost\+Straight}} () const
-\begin{DoxyCompactList}\small\item\em Getter and Setter for the private member varialbes. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Getter and Setter for the private member variables. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classplanner_1_1c_rover_interface_ab4c45b0f0c586f864a83ba90be06efd0}\label{classplanner_1_1c_rover_interface_ab4c45b0f0c586f864a83ba90be06efd0}} 
 double {\bfseries Cost\+Diagonal} () const
 \item 
