--- a/doc/latex/structplanner_1_1t_location.tex
+++ b/doc/latex/structplanner_1_1t_location.tex
@@ -11,8 +11,7 @@ Data structure used as location information for nodes.
 
 
 
-Inheritance diagram for planner\+:\+:t\+Location\+:
-\nopagebreak
+Inheritance diagram for planner\+:\+:t\+Location\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
