--- a/doc/latex/structplanner_1_1t_simple_location.tex
+++ b/doc/latex/structplanner_1_1t_simple_location.tex
@@ -11,8 +11,7 @@ Extended location struct with identifier used as hash value.
 
 
 
-Inheritance diagram for planner\+:\+:t\+Simple\+Location\+:
-\nopagebreak
+Inheritance diagram for planner\+:\+:t\+Simple\+Location\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for planner\+:\+:t\+Simple\+Location\+:
 \end{figure}
 
 
-Collaboration diagram for planner\+:\+:t\+Simple\+Location\+:
-\nopagebreak
+Collaboration diagram for planner\+:\+:t\+Simple\+Location\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
