--- a/doc/latex/structt_result.tex
+++ b/doc/latex/structt_result.tex
@@ -28,7 +28,7 @@ int \mbox{\hyperlink{structt_result_aeec87653572128a631adb83face701ee}{n\+Nodes\
 \begin{DoxyCompactList}\small\item\em Stores the number of expanded nodes. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{structt_result_ae43cdacfd85c009a19f17af62adf8729}\label{structt_result_ae43cdacfd85c009a19f17af62adf8729}} 
 int \mbox{\hyperlink{structt_result_ae43cdacfd85c009a19f17af62adf8729}{n\+Iterations}}
-\begin{DoxyCompactList}\small\item\em Numer of total iterations. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Number of total iterations. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
