--- a/doc/latex/structvisualizer_1_1_bitmap.tex
+++ b/doc/latex/structvisualizer_1_1_bitmap.tex
@@ -2,8 +2,7 @@
 \label{structvisualizer_1_1_bitmap}\index{visualizer\+::\+Bitmap@{visualizer\+::\+Bitmap}}
 
 
-Collaboration diagram for visualizer\+:\+:Bitmap\+:
-\nopagebreak
+Collaboration diagram for visualizer\+:\+:Bitmap\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
