--- a/doc/latex/classplanner_1_1c_planner.tex
+++ b/doc/latex/classplanner_1_1c_planner.tex
@@ -11,8 +11,7 @@ Implements the planner interface c\+Planner\+Interface$<$size\+\_\+t Directions$
 
 
 
-Inheritance diagram for planner\+:\+:c\+Planner\+:
-\nopagebreak
+Inheritance diagram for planner\+:\+:c\+Planner\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for planner\+:\+:c\+Planner\+:
 \end{figure}
 
 
-Collaboration diagram for planner\+:\+:c\+Planner\+:
-\nopagebreak
+Collaboration diagram for planner\+:\+:c\+Planner\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -82,7 +80,7 @@ int \mbox{\hyperlink{classplanner_1_1c_planner_a4c99873ce64b214899d65eda6366455f
 \subsection*{Protected Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{structt_result}{t\+Result}} \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{A\+Star}} ()
+virtual \mbox{\hyperlink{structt_result}{t\+Result}} \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{A\+Star}} ()
 \begin{DoxyCompactList}\small\item\em A\+Star algorithm implementation. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classplanner_1_1c_planner_a2e5a745f83f903662eff914d8beddb5e}{Calculate\+Consistency\+Factor}} ()
 \begin{DoxyCompactList}\small\item\em Calculates a consistency factor to get a consistent heuristic h(n) $<$= c(p,n) + h(p) \end{DoxyCompactList}\item 
@@ -103,7 +101,7 @@ double \mbox{\hyperlink{classplanner_1_1c_planner_ac9f4be1c679321a2f6bc5d1a1102b
 \begin{DoxyCompactList}\small\item\em This value is calculated in the constructor of \mbox{\hyperlink{classplanner_1_1c_planner}{planner\+::c\+Planner}} and used to scale the heuristic values to get consistency. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classplanner_1_1c_planner_a1c212bac80800ef51aacaa63fce32a2a}\label{classplanner_1_1c_planner_a1c212bac80800ef51aacaa63fce32a2a}} 
 \mbox{\hyperlink{structplanner_1_1_priority_queue}{Priority\+Queue}}$<$ std\+::shared\+\_\+ptr$<$ \mbox{\hyperlink{structplanner_1_1t_node}{t\+Node}} $>$, double $>$ \mbox{\hyperlink{classplanner_1_1c_planner_a1c212bac80800ef51aacaa63fce32a2a}{m\+\_\+o\+Frontier}}
-\begin{DoxyCompactList}\small\item\em Priority queue data structure, which is the basis of A star. Always deques the node with the best f score first. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Priority queue data structure, which is the basis of A star. Always dequeues the node with the best f score first. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
@@ -127,13 +125,13 @@ The
 \index{planner\+::c\+Planner@{planner\+::c\+Planner}!A\+Star@{A\+Star}}
 \index{A\+Star@{A\+Star}!planner\+::c\+Planner@{planner\+::c\+Planner}}
 \subsubsection{\texorpdfstring{A\+Star()}{AStar()}}
-{\footnotesize\ttfamily \mbox{\hyperlink{structt_result}{t\+Result}} planner\+::c\+Planner\+::\+A\+Star (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [protected]}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structt_result}{t\+Result}} planner\+::c\+Planner\+::\+A\+Star (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [virtual]}}
 
 
 
 A\+Star algorithm implementation. 
 
-Initializes start, goal and intermediate nodes (s\+Current and s\+Next). The frontier m\+\_\+o\+Frontier is implemented as a priority queue Priority\+Queue$<$t\+Node$\ast$$>$ and initialized with the start node. All other expanded nodes are store in a std\+::map o\+Path\+Cost with their currently best g score value. The algorithm makes use of \mbox{\hyperlink{classplanner_1_1c_planner_a6b7554394efd7ad10d76a49b370aa62f}{Goal\+Test()}}, \mbox{\hyperlink{classplanner_1_1c_planner_adbffc6ce05119c940a09369d7e61554e}{Child()}} to generate sucessor nodes given an action, Traversable to check for the constraints imposed by the overrides.\+data file, cost methods \mbox{\hyperlink{classplanner_1_1c_planner_a16e8c156297fff49a6ba9b97073baffb}{Update\+Cost()}} for the step cost, \mbox{\hyperlink{classplanner_1_1c_planner_ab7cc7c2666de2e49f745901080aac147}{Update\+Heuristic()}} while checking for consistency \mbox{\hyperlink{classplanner_1_1c_planner_a1234d075676fcaa2c17b859d11b4638c}{Heuristic\+Check()}}. In case the goal node is reached, the method \mbox{\hyperlink{classplanner_1_1c_planner_a8624cb2afb8f2fd216c38b4424013178}{Traverse\+Path()}} is invoked to move from the goal back to the start node, thereby following the fastest path and setting bit 1 of the overrides map, see \mbox{\hyperlink{classplanner_1_1c_graph_a6da6e6e269013628aef48245a7787cb9}{planner\+::c\+Graph\+::\+Set\+Overrides()}}. \begin{DoxyReturn}{Returns}
+Initializes start, goal and intermediate nodes (s\+Current and s\+Next). The frontier m\+\_\+o\+Frontier is implemented as a priority queue Priority\+Queue$<$t\+Node$\ast$$>$ and initialized with the start node. All other expanded nodes are store in a std\+::map o\+Path\+Cost with their currently best g score value. The algorithm makes use of \mbox{\hyperlink{classplanner_1_1c_planner_a6b7554394efd7ad10d76a49b370aa62f}{Goal\+Test()}}, \mbox{\hyperlink{classplanner_1_1c_planner_adbffc6ce05119c940a09369d7e61554e}{Child()}} to generate successor nodes given an action, Traversable to check for the constraints imposed by the overrides.\+data file, cost methods \mbox{\hyperlink{classplanner_1_1c_planner_a16e8c156297fff49a6ba9b97073baffb}{Update\+Cost()}} for the step cost, \mbox{\hyperlink{classplanner_1_1c_planner_ab7cc7c2666de2e49f745901080aac147}{Update\+Heuristic()}} while checking for consistency \mbox{\hyperlink{classplanner_1_1c_planner_a1234d075676fcaa2c17b859d11b4638c}{Heuristic\+Check()}}. In case the goal node is reached, the method \mbox{\hyperlink{classplanner_1_1c_planner_a8624cb2afb8f2fd216c38b4424013178}{Traverse\+Path()}} is invoked to move from the goal back to the start node, thereby following the fastest path and setting bit 1 of the overrides map, see \mbox{\hyperlink{classplanner_1_1c_graph_a6da6e6e269013628aef48245a7787cb9}{planner\+::c\+Graph\+::\+Set\+Overrides()}}. \begin{DoxyReturn}{Returns}
 the time it took to find the fastest path in island seconds. 
 \end{DoxyReturn}
 Define start node
@@ -164,7 +162,11 @@ Check that heuristic never overestimates the true distance\+: Priority of a new 
 ~\newline
  Move from the current node back to the start node
 
-Free memory \mbox{\Hypertarget{classplanner_1_1c_planner_a2e5a745f83f903662eff914d8beddb5e}\label{classplanner_1_1c_planner_a2e5a745f83f903662eff914d8beddb5e}} 
+Free memory 
+
+Reimplemented in \mbox{\hyperlink{classplanner_1_1c_planner_wiki_a2652cf0e84d0a1fcd17e6c4288179955}{planner\+::c\+Planner\+Wiki}}, and \mbox{\hyperlink{classplanner_1_1c_planner_r_b_g_affd7011ef4df878a8e95ecf7f42c8e6f}{planner\+::c\+Planner\+R\+BG}}.
+
+\mbox{\Hypertarget{classplanner_1_1c_planner_a2e5a745f83f903662eff914d8beddb5e}\label{classplanner_1_1c_planner_a2e5a745f83f903662eff914d8beddb5e}} 
 \index{planner\+::c\+Planner@{planner\+::c\+Planner}!Calculate\+Consistency\+Factor@{Calculate\+Consistency\+Factor}}
 \index{Calculate\+Consistency\+Factor@{Calculate\+Consistency\+Factor}!planner\+::c\+Planner@{planner\+::c\+Planner}}
 \subsubsection{\texorpdfstring{Calculate\+Consistency\+Factor()}{CalculateConsistencyFactor()}}
@@ -184,7 +186,7 @@ Calculates the gradient of the elevation and considers the acceleration on slope
 
 Generate a successor node state given a node i\+\_\+s\+Parent and action i\+\_\+s\+Action. 
 
-Overrides method of the base class inteface c\+Planner\+Interface$<$size\+\_\+t Directions$>$. Defines a new node on the heap and initializes it according to the given action.
+Overrides method of the base class interface c\+Planner\+Interface$<$size\+\_\+t Directions$>$. Defines a new node on the heap and initializes it according to the given action.
 
 
 \begin{DoxyParams}[1]{Parameters}
