--- a/doc/latex/structplanner_1_1t_simple_node.tex
+++ b/doc/latex/structplanner_1_1t_simple_node.tex
@@ -11,8 +11,7 @@ Simplified node struct without the a pointer to its parent as in node struct (\m
 
 
 
-Inheritance diagram for planner\+:\+:t\+Simple\+Node\+:
-\nopagebreak
+Inheritance diagram for planner\+:\+:t\+Simple\+Node\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for planner\+:\+:t\+Simple\+Node\+:
 \end{figure}
 
 
-Collaboration diagram for planner\+:\+:t\+Simple\+Node\+:
-\nopagebreak
+Collaboration diagram for planner\+:\+:t\+Simple\+Node\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
