updates doxygen documentation

--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -6,9 +6,9 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_graph}{planner\+::c\+Graph}} \\*The map class c\+Map has pointers to the elevation.\+data (m\+\_\+po\+Elevation) and overrides.\+data (m\+\_\+po\+Overrides) }{\pageref{classplanner_1_1c_graph}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_planner}{planner\+::c\+Planner}} \\*Implements the planner interface c\+Planner\+Interface$<$size\+\_\+t Directions$>$ with an action vector of size eight }{\pageref{classplanner_1_1c_planner}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_planner_interface}{planner\+::c\+Planner\+Interface$<$ Directions $>$}} \\*C\+Planner\+Interface is an abstract interface which can be implemented by concrete planner classes }{\pageref{classplanner_1_1c_planner_interface}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_planner_r_b_g}{planner\+::c\+Planner\+R\+BG}} \\*Extends the planner class to implement A$\ast$ from Wikipedia }{\pageref{classplanner_1_1c_planner_r_b_g}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_planner_r_b_g}{planner\+::c\+Planner\+R\+BG}} \\*Extends the planner class to implement A$\ast$ from Red Blob Games \href{https://www.redblobgames.com/pathfinding/a-star/implementation.html#cplusplus}{\tt https\+://www.\+redblobgames.\+com/pathfinding/a-\/star/implementation.\+html\#cplusplus} }{\pageref{classplanner_1_1c_planner_r_b_g}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classc_planner_test}{c\+Planner\+Test}} \\*The fixture for testing class \mbox{\hyperlink{classc_planner_test}{c\+Planner\+Test}} }{\pageref{classc_planner_test}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_planner_wiki}{planner\+::c\+Planner\+Wiki}} \\*Extends the planner class to implement A$\ast$ from Wikipedia }{\pageref{classplanner_1_1c_planner_wiki}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_planner_wiki}{planner\+::c\+Planner\+Wiki}} \\*Extends the planner class to implement A$\ast$ from Wikipedia \href{https://en.wikipedia.org/wiki/A}{\tt https\+://en.\+wikipedia.\+org/wiki/A}$\ast$\+\_\+search\+\_\+algorithm\#\+Pseudocode }{\pageref{classplanner_1_1c_planner_wiki}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classplanner_1_1c_rover_interface}{planner\+::c\+Rover\+Interface$<$ Directions $>$}} \\*Forward declaration of interface \mbox{\hyperlink{classplanner_1_1c_rover_interface}{planner\+::c\+Rover\+Interface}} }{\pageref{classplanner_1_1c_rover_interface}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structvisualizer_1_1_file_header}{visualizer\+::\+File\+Header}} }{\pageref{structvisualizer_1_1_file_header}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structplanner_1_1_priority_queue}{planner\+::\+Priority\+Queue$<$ T, priority\+\_\+t $>$}} \\*Priority queue servers as frontier that stores the best nodes explored during \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{planner\+::c\+Planner\+::\+A\+Star()}} }{\pageref{structplanner_1_1_priority_queue}}{}
