--- a/doc/latex/classplanner_1_1c_planner.tex
+++ b/doc/latex/classplanner_1_1c_planner.tex
@@ -11,7 +11,8 @@ Implements the planner interface c\+Planner\+Interface$<$size\+\_\+t Directions$
 
 
 
-Inheritance diagram for planner\+:\+:c\+Planner\+:\nopagebreak
+Inheritance diagram for planner\+:\+:c\+Planner\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
