--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -138,7 +138,7 @@ The new implementations c\+Planner\+Wiki and c\+Planner\+R\+BG inherit c\+Planne
 \item Adds g\+Tests that use a simplified map, including water and elevation transitions. The result struct is used to check the expected results.
 \item Refactors visualizer
 \begin{DoxyItemize}
-\item Encapsulates the visualizer\+::write\+B\+M\+P() function including its lambda expression
+\item Encapsulates the \mbox{\hyperlink{namespacevisualizer_ab4e649cd7413a51ac1ae4b31a2994c3a}{visualizer\+::write\+B\+M\+P()}} function including its lambda expression
 \item Adds option (flag) what to draw
 \begin{DoxyItemize}
 \item locations such as start and goal passed as list of locations,
