--- a/doc/latex/md___users_fjp_git_bachelor__r_e_a_d_m_e_v0.tex
+++ b/doc/latex/md___users_fjp_git_bachelor__r_e_a_d_m_e_v0.tex
@@ -101,7 +101,7 @@ I added google g\+Test version 1.\+8.\+0 to the zip file and created a test fixt
 
 As explained in software the default values for step size and velocity are set to one for both parameters. I tested with different step sizes to reach the goal faster, thereby verifying that the path and island seconds stay the same.
 
-To get intermediate paths from the \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{planner\+::c\+Planner\+::\+A\+Star()}} I used the provided visualizer\+::write\+B\+M\+P() inside A\+Star(). This results in the following output\+:
+To get intermediate paths from the \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{planner\+::c\+Planner\+::\+A\+Star()}} I used the provided \mbox{\hyperlink{namespacevisualizer_ab4e649cd7413a51ac1ae4b31a2994c3a}{visualizer\+::write\+B\+M\+P()}} inside A\+Star(). This results in the following output\+:
 
 \subsection*{Results}
 
