--- a/doc/latex/namespaceplanner.tex
+++ b/doc/latex/namespaceplanner.tex
@@ -17,9 +17,9 @@ class \mbox{\hyperlink{classplanner_1_1c_planner}{c\+Planner}}
 class \mbox{\hyperlink{classplanner_1_1c_planner_interface}{c\+Planner\+Interface}}
 \begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{classplanner_1_1c_planner_interface}{c\+Planner\+Interface}} is an abstract interface which can be implemented by concrete planner classes. \end{DoxyCompactList}\item 
 class \mbox{\hyperlink{classplanner_1_1c_planner_r_b_g}{c\+Planner\+R\+BG}}
-\begin{DoxyCompactList}\small\item\em Extends the planner class to implement A$\ast$ from Wikipedia. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Extends the planner class to implement A$\ast$ from Red Blob Games \href{https://www.redblobgames.com/pathfinding/a-star/implementation.html#cplusplus}{\tt https\+://www.\+redblobgames.\+com/pathfinding/a-\/star/implementation.\+html\#cplusplus}. \end{DoxyCompactList}\item 
 class \mbox{\hyperlink{classplanner_1_1c_planner_wiki}{c\+Planner\+Wiki}}
-\begin{DoxyCompactList}\small\item\em Extends the planner class to implement A$\ast$ from Wikipedia. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Extends the planner class to implement A$\ast$ from Wikipedia \href{https://en.wikipedia.org/wiki/A}{\tt https\+://en.\+wikipedia.\+org/wiki/A}$\ast$\+\_\+search\+\_\+algorithm\#\+Pseudocode. \end{DoxyCompactList}\item 
 class \mbox{\hyperlink{classplanner_1_1c_rover_interface}{c\+Rover\+Interface}}
 \begin{DoxyCompactList}\small\item\em Forward declaration of interface \mbox{\hyperlink{classplanner_1_1c_rover_interface}{planner\+::c\+Rover\+Interface}}. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structplanner_1_1_priority_queue}{Priority\+Queue}}
