--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -152,6 +152,7 @@
 \input{annotated}
 \chapter{Namespace Documentation}
 \input{namespaceplanner}
+\input{namespacevisualizer}
 \chapter{Class Documentation}
 \input{structvisualizer_1_1_bitmap}
 \input{structvisualizer_1_1_bitmap_info_header}
