--- a/doc/latex/classplanner_1_1c_planner_r_b_g.tex
+++ b/doc/latex/classplanner_1_1c_planner_r_b_g.tex
@@ -2,7 +2,7 @@
 \label{classplanner_1_1c_planner_r_b_g}\index{planner\+::c\+Planner\+R\+BG@{planner\+::c\+Planner\+R\+BG}}
 
 
-Extends the planner class to implement A$\ast$ from Wikipedia.  
+Extends the planner class to implement A$\ast$ from Red Blob Games \href{https://www.redblobgames.com/pathfinding/a-star/implementation.html#cplusplus}{\tt https\+://www.\+redblobgames.\+com/pathfinding/a-\/star/implementation.\+html\#cplusplus}.  
 
 
 
@@ -43,12 +43,12 @@ Collaboration diagram for planner\+:\+:c\+Planner\+R\+BG\+:\nopagebreak
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\hyperlink{structt_result}{t\+Result}} \mbox{\hyperlink{classplanner_1_1c_planner_r_b_g_affd7011ef4df878a8e95ecf7f42c8e6f}{A\+Star}} () override
-\begin{DoxyCompactList}\small\item\em A\+Star algorithm implementation. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em A\+Star algorithm implementation. Overrides \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{c\+Planner\+::\+A\+Star()}} method. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Additional Inherited Members}
 
 
 \subsection{Detailed Description}
-Extends the planner class to implement A$\ast$ from Wikipedia. 
+Extends the planner class to implement A$\ast$ from Red Blob Games \href{https://www.redblobgames.com/pathfinding/a-star/implementation.html#cplusplus}{\tt https\+://www.\+redblobgames.\+com/pathfinding/a-\/star/implementation.\+html\#cplusplus}. 
 
 \subsection{Constructor \& Destructor Documentation}
 \mbox{\Hypertarget{classplanner_1_1c_planner_r_b_g_a91296b98e64effc16f38e2430746d94d}\label{classplanner_1_1c_planner_r_b_g_a91296b98e64effc16f38e2430746d94d}} 
@@ -72,12 +72,9 @@ The
 
 
 
-A\+Star algorithm implementation. 
+A\+Star algorithm implementation. Overrides \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{c\+Planner\+::\+A\+Star()}} method. 
 
-Initializes start, goal and intermediate nodes (s\+Current and s\+Next). The frontier m\+\_\+o\+Frontier is implemented as a priority queue Priority\+Queue$<$t\+Node$\ast$$>$ and initialized with the start node. All other expanded nodes are store in a std\+::map o\+Path\+Cost with their currently best g score value. The algorithm makes use of \mbox{\hyperlink{classplanner_1_1c_planner_a6b7554394efd7ad10d76a49b370aa62f}{Goal\+Test()}}, \mbox{\hyperlink{classplanner_1_1c_planner_adbffc6ce05119c940a09369d7e61554e}{Child()}} to generate successor nodes given an action, Traversable to check for the constraints imposed by the overrides.\+data file, cost methods \mbox{\hyperlink{classplanner_1_1c_planner_a16e8c156297fff49a6ba9b97073baffb}{Update\+Cost()}} for the step cost, \mbox{\hyperlink{classplanner_1_1c_planner_ab7cc7c2666de2e49f745901080aac147}{Update\+Heuristic()}} while checking for consistency \mbox{\hyperlink{classplanner_1_1c_planner_a1234d075676fcaa2c17b859d11b4638c}{Heuristic\+Check()}}. In case the goal node is reached, the method \mbox{\hyperlink{classplanner_1_1c_planner_a8624cb2afb8f2fd216c38b4424013178}{Traverse\+Path()}} is invoked to move from the goal back to the start node, thereby following the fastest path and setting bit 1 of the overrides map, see \mbox{\hyperlink{classplanner_1_1c_graph_a6da6e6e269013628aef48245a7787cb9}{planner\+::c\+Graph\+::\+Set\+Overrides()}}. \begin{DoxyReturn}{Returns}
-the time it took to find the fastest path in island seconds. 
-\end{DoxyReturn}
-Start
+For the implementation details see \href{https://www.redblobgames.com/pathfinding/a-star/implementation.html#cplusplus}{\tt https\+://www.\+redblobgames.\+com/pathfinding/a-\/star/implementation.\+html\#cplusplus}. Start
 
 Initialize result struct
 
@@ -86,37 +83,7 @@ Check if we reached the goal\+:
 Mark visited nodes
 
 Check that heuristic never overestimates the true distance\+: Priority of a new node should never be lower than the priority of its parent. ~\newline
- Move from the current node back to the start node
-
-Define start node
-
-Create hash of the node using its position
-
-Get the goal node
-
-Create current node
-
-Serves as explored (closed) set and cost to reach a node
-
-Initialize start node with cost of zero because it does not cost anything to go to it
-
-Initialize result struct
-
-Resign if the frontier is empty, which means there are no nodes to expand and the goal has not been found
-
-Check if the node is already explored and if its path cost got smaller (found a better path to it).
-
-Check if the heuristic of the node is consistent h(n) $<$= c(p,n) + h(p).
-
-Update the evaluation score value and put it on the frontier.
-
-Mark visited nodes
-
-Check that heuristic never overestimates the true distance\+: Priority of a new node should never be lower than the priority of its parent. ~\newline
-~\newline
- Move from the current node back to the start node
-
-Free memory 
+ Move from the current node back to the start node 
 
 Reimplemented from \mbox{\hyperlink{classplanner_1_1c_planner_a341e70531266f023ac9461d18979d1ef}{planner\+::c\+Planner}}.
 
