--- a/doc/latex/namespaces.tex
+++ b/doc/latex/namespaces.tex
@@ -1,4 +1,5 @@
 \section{Namespace List}
 Here is a list of all documented namespaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceplanner}{planner}} \\*Contains the Interfaces and their implementations to solve the Bachelor challenge }{\pageref{namespaceplanner}}{}
+\item\contentsline{section}{\mbox{\hyperlink{namespacevisualizer}{visualizer}} \\*Contains functions for plotting overrides data and elevation }{\pageref{namespacevisualizer}}{}
 \end{DoxyCompactList}
