--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -44,7 +44,7 @@ Both use less memory than my previous implementation, which can still be found i
 
 \subsubsection*{g\+Tests using Simple Maps}
 
-The mentioned implementations are used in new g\+Tests which create and use simple maps to test if the different implementations yield the same results (regarding travelling time given in island seconds). All test results are found in \href{doc/TestResults-testPlanner.html}{\tt doc/\+Test\+Results-\/test\+Planner.\+html}. Light red areas show the visited nodes, which is a new feature implemented in visualizer. The island map results for all three implementations are stored in \href{doc/images/test/}{\tt doc/images/test/}.
+The mentioned implementations are used in new g\+Tests which create and use simple maps to test if the different implementations yield the same results (regarding travelling time given in island seconds). All test results are found in \href{doc/TestResults-testPlanner.html}{\tt doc/\+Test\+Results-\/test\+Planner.\+html}. Light red areas show the visited nodes, which is a new feature implemented in the lambda expression used in {\ttfamily \mbox{\hyperlink{namespacevisualizer_a2f66e38c689ff3c3731faa95739bbf25}{visualizer\+::write}}} function. The island map results for all three implementations are stored in \href{doc/images/test/}{\tt doc/images/test/}.
 
 
 \begin{DoxyEnumerate}
